@@ -49,7 +49,7 @@ export(.checkMFClasses, .getXlevels, .MFclass, acf, acf2AR, add.scope,
        p.adjust.methods, pacf, pairwise.table, pbeta, pbinom, pcauchy,
        pchisq, pexp, pf, pgamma, pgeom, phyper, plclust, plnorm,
        plogis, pnbinom, pnorm, poisson, poly, polym, power, ppoints,
-       ppois, ppr, PP.test, prcomp, predict, preplot, princomp,
+       ppois, ppr, PP.test, prcomp, predict, preplot, .preformat.ts, princomp,
        printCoefmat, profile, proj, promax, psignrank, pt, ptukey,
        punif, pweibull, pwilcox, qbeta, qbinom, qcauchy, qchisq, qexp,
        qf, qgamma, qgeom, qhyper, qlnorm, qlogis, qnbinom, qnorm,
